Add View All up for grabs shifts button

--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -111,6 +111,15 @@
               </ion-slide-box>
             </div>
           </div>
+          <div class="shifts-input input-tab-contents" ng-controller="ShiftsInputCtrl" ng-show="!loader">
+            <div class="shift-input-buttons-holder">
+              <div class="bottom-block">
+                <a class="button button-positive" href="#/tab/swaps/up-for-grabs/all/list">
+                  View All as List
+                </a>
+              </div>
+            </div>
+          </div>
         </ion-content>
       </ion-view>
     </ion-tab>
