--- a/www/lib/ionic/scss/custom/calendar/_calendar.scss
+++ b/www/lib/ionic/scss/custom/calendar/_calendar.scss
@@ -99,6 +99,15 @@
     &.swap {
       color: $energized;
     }
+
+    .num-shifts-available-on-calendar {
+      background-color: $energized;
+      font-size: 12px;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      margin: 0 auto;
+    }
   }
 }
 
