--- a/www/lib/ionic/scss/custom/calendar/_calendar.scss
+++ b/www/lib/ionic/scss/custom/calendar/_calendar.scss
@@ -100,17 +100,34 @@
       color: $energized;
     }
 
-    .num-shifts-available-on-calendar {
-      background-color: $energized;
-      font-size: 12px;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      margin: 0 auto;
+    .num-shifts-available-on-calendar-holder {
+      a {
+        text-decoration: none;
+        color: black;
+      }
     }
   }
 }
 
+.num-shifts-available-on-calendar {
+  background-color: $energized;
+  font-size: 12px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+
+  &.in-calendar {
+    margin: 0 auto;
+  }
+
+  &.outside-of-calendar {
+    float: left;
+  }
+}
+
+.num-shifts-description {
+  float: left;
+}
 
 
 
