--- a/www/templates/swaps/own-detail.html
+++ b/www/templates/swaps/own-detail.html
@@ -1,7 +1,7 @@
 <ion-view>
 <ion-nav-title>Details</ion-nav-title>
   <ion-nav-buttons side="left">
-    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/index">My Swaps</a>
+    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/index" ng-click="clearHistory()">My Swaps</a>
   </ion-nav-buttons>
   <ion-content>
     <div class="swap-own-detail-holder">
