--- a/www/templates/swaps/up-for-grabs-list.html
+++ b/www/templates/swaps/up-for-grabs-list.html
@@ -1,7 +1,7 @@
 <ion-view>
   <ion-nav-title>Date</ion-nav-title>
   <ion-nav-buttons side="left">
-    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/index">Back</a>
+    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/index" ng-click="clearHistory()">Back</a>
   </ion-nav-buttons>
   <ion-content>
     <notification ng-model="message" ng-show="message"></notification>
