Able to go to new offer detail page

--- a/www/templates/swaps/up-for-grabs-list.html
+++ b/www/templates/swaps/up-for-grabs-list.html
@@ -41,11 +41,11 @@
         </div>
 
         <div class="item tabs tabs-secondary tabs-icon-left">
-          <a class="tab-item" href="#">
+          <a class="tab-item" href="#/tab/swaps/up-for-grabs/offer/{{shift.id}}/{{day}}/new">
             <i class="icon ion-arrow-swap"></i>
             Offer to Swap
           </a>
-          <a class="tab-item" href="#">
+          <a class="tab-item">
             <i class="icon ion-chatbox"></i>
             Comment
           </a>
