--- a/www/lib/ionic/scss/custom/_main.scss
+++ b/www/lib/ionic/scss/custom/_main.scss
@@ -56,3 +56,13 @@ a {
     color: $highlight !important;
   }
 }
+
+.top-instructions {
+  background-color: $highlight;
+  padding: 15px;
+  font-size: 16px;
+}
+
+.bottom-note {
+  padding: 15px;
+}
