--- a/www/lib/ionic/scss/custom/calendar/_calendar.scss
+++ b/www/lib/ionic/scss/custom/calendar/_calendar.scss
@@ -100,6 +100,11 @@
       color: $energized;
     }
 
+    &.cannot-offer-as-swap {
+      background-color: #f8f8f8;
+      // color: white !important;
+    }
+
     .num-shifts-available-on-calendar-holder {
       a {
         text-decoration: none;
