--- a/www/lib/ionic/scss/custom/_main.scss
+++ b/www/lib/ionic/scss/custom/_main.scss
@@ -61,8 +61,15 @@ a {
   background-color: $highlight;
   padding: 15px;
   font-size: 16px;
+
+  .sub-instructions {
+    font-style: italic;
+    font-size: 14px;
+    margin-top: 10px;
+  }
 }
 
 .bottom-note {
+  text-align: center;
   padding: 15px;
 }
