Add blank offer to swap button

--- a/www/templates/swaps/new-offer.html
+++ b/www/templates/swaps/new-offer.html
@@ -68,6 +68,12 @@
     </div>
 
     <div class="bottom-note" ng-show="!loader">
+      <div>
+        <a class="button button-positive" href="">
+          Offer to Swap
+        </a>
+      </div>
+      <br>
       <p>
         You cannot offer some shifts because {{shift_owner.first_name}} already has a shift on that day.
       </p>
