WIP: Create swap

--- a/www/templates/swaps/new-offer.html
+++ b/www/templates/swaps/new-offer.html
@@ -69,7 +69,7 @@
 
     <div class="bottom-note" ng-show="!loader">
       <div>
-        <a class="button button-positive" href="">
+        <a class="button button-positive" ng-click="offerToSwap()">
           Offer to Swap
         </a>
       </div>
