--- a/www/templates/swaps/own-detail.html
+++ b/www/templates/swaps/own-detail.html
@@ -1,5 +1,5 @@
 <ion-view>
-<ion-nav-title>Details</ion-nav-title>
+<ion-nav-title></ion-nav-title>
   <ion-nav-buttons side="left">
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/index" ng-click="clearHistory()">My Swaps</a>
   </ion-nav-buttons>
@@ -28,6 +28,89 @@
           </div>
         </div>
       </div>
+
+    </div>
+    <div class="list">
+
+      <div ng-controller="CalendarCtrl" class="calender-display">
+        <div class="calendar-holder" ng-if="calendarObjects">
+          <ion-slide-box show-pager="false" auto-play="false" active-slide="3">
+            <ion-slide ng-repeat="month in calendarObjects">
+              <div class="month-bar stable-bg">
+                <span class="icon-holder back-icon" ng-click="previousSlide()">
+                  <i class="icon ion-ios-arrow-back"></i>
+                </span>
+                <span>
+                  {{month.title}}
+                </span>
+                <span class="icon-holder forward-icon" ng-click="nextSlide()">
+                  <i class="icon ion-ios-arrow-forward"></i>
+                </span>
+              </div>
+              <div class="days-of-week-bar">
+                <div class="row">
+                  <div class="col special">S</div>
+                  <div class="col">M</div>
+                  <div class="col">T</div>
+                  <div class="col">W</div>
+                  <div class="col">T</div>
+                  <div class="col">F</div>
+                  <div class="col special">S</div>
+                </div>
+              </div>
+              <div class="dates">
+                <div class="row" ng-repeat="row in month.rows">
+                  <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}">
+                    <div class="date-number">
+                      {{date.dayNum}}
+                    </div>
+                    <div class="content-text">
+                      <div ng-if="date.shift">
+                        {{date.shift.shift_type.abbreviation}}
+                      </div>
+                      <div ng-if="date.availableShifts" class="num-shifts-available-on-calendar-holder">
+                        <a href="#/tab/swaps/up-for-grabs/{{date.dateAsString}}/list">
+                          <div class="num-shifts-available-on-calendar in-calendar">
+                            {{date.availableShifts.length}}
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </ion-slide>
+          </ion-slide-box>
+        </div>
+      </div>
+
+      <div ng-if="shift.swaps.length > 0">
+        <div class="item item-divider">
+          <ng-pluralize count="orderedOfferedShifts.length" when="{'0': '', '1': '1 Offer ', 'other': '{{orderedOfferedShifts.length}} Offers '}"></ng-pluralize>
+          <ng-pluralize count="shift.swaps.length" when="{'0': '', '1': 'from 1 Person', 'other': 'from {{shift.swaps.length}} People'}"></ng-pluralize>
+        </div>
+
+        <a class="item item-avatar" ng-repeat="offeredShift in orderedOfferedShifts">
+          <div class="date-as-square">
+            <div class="month">
+              {{abbreviatedMonth(offeredShift.start_date)}}
+            </div>
+            <div class="day">
+              {{dateFromString(offeredShift.start_date)}}
+            </div>
+          </div>
+          <h2>{{offeredShift.shift_type.name}}</h2>
+          <p>
+            {{offeredShift.shift_type.start_hour | numberFixedLen: 2}}:{{offeredShift.shift_type.start_minute | numberFixedLen: 2}} - {{prettyEndTime(offeredShift.shift_type)}}
+          </p>
+          <p>{{offeredShift.user.first_name}} {{offeredShift.user.last_name}}</p>
+        </a>
+      </div>
+
+      <div ng-if="shift.swaps.length == 0">
+        No swaps offered yet
+      </div>
+
     </div>
   </ion-content>
 </ion-view>
