--- a/www/lib/ionic/scss/custom/swaps/_own_detail.scss
+++ b/www/lib/ionic/scss/custom/swaps/_own_detail.scss
@@ -1,3 +1,15 @@
 .swap-own-detail-holder {
   padding: 15px;
+
+  .date-title {
+    font-size: 16px;
+  }
+
+  p {
+    margin-bottom: 5px;
+  }
+}
+
+.bottom-notification-text {
+  padding: 15px;
 }
