Show accept button for offered swaps

--- a/www/lib/ionic/scss/custom/swaps/_own_detail.scss
+++ b/www/lib/ionic/scss/custom/swaps/_own_detail.scss
@@ -10,6 +10,7 @@
   }
 }
 
-.bottom-notification-text {
-  padding: 15px;
+.accept-offered-swap-button {
+  margin-top: 10px !important;
+  font-size: 14px !important;
 }
