--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -272,8 +272,9 @@ a {
   .swap-own-detail-holder p {
     margin-bottom: 5px; }
 
-.bottom-notification-text {
-  padding: 15px; }
+.accept-offered-swap-button {
+  margin-top: 10px !important;
+  font-size: 14px !important; }
 
 .up-for-grabs-list .item-body p {
   margin: 5px 0px; }
