API to accept an offered swap

--- a/www/templates/swaps/own-detail.html
+++ b/www/templates/swaps/own-detail.html
@@ -114,7 +114,7 @@
           </p>
           <p>{{offeredShift.user.first_name}} {{offeredShift.user.last_name}}</p>
 
-          <button class="button button-positive accept-offered-swap-button">
+          <button class="button button-positive accept-offered-swap-button" ng-click="acceptSwap(offeredShift)">
             Accept
           </button>
         </div>
