Sort own shifts to swap list into state categories

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -262,6 +262,11 @@ a {
     margin-top: 4px;
     margin-bottom: -7px; }
 
+.has-accepted-a-swap-details {
+  border-top: 1px solid lightgrey;
+  margin-top: 5px;
+  padding-top: 5px; }
+
 .double-tab-bottom-buffer {
   height: 30px; }
 
