--- a/www/lib/ionic/scss/custom/swaps/_shared.scss
+++ b/www/lib/ionic/scss/custom/swaps/_shared.scss
@@ -19,6 +19,12 @@
   }
 }
 
+.has-accepted-a-swap-details {
+  border-top: 1px solid lightgrey;
+  margin-top: 5px;
+  padding-top: 5px;
+}
+
 .double-tab-bottom-buffer {
   height: 30px;
 }
