--- a/www/lib/ionic/scss/custom/swaps/_own_detail.scss
+++ b/www/lib/ionic/scss/custom/swaps/_own_detail.scss
@@ -8,6 +8,12 @@
   p {
     margin-bottom: 5px;
   }
+
+  .swapping-for-holder {
+    margin-top: 10px;
+    padding-top: 10px;
+    border-top: 1px solid lightgrey;
+  }
 }
 
 .accept-offered-swap-button {
