--- a/www/lib/ionic/scss/custom/swaps/_own_detail.scss
+++ b/www/lib/ionic/scss/custom/swaps/_own_detail.scss
@@ -14,6 +14,11 @@
     padding-top: 10px;
     border-top: 1px solid lightgrey;
   }
+
+  .approve-button {
+    margin: 10px 0px;
+    color: $text-on-energized !important;
+  }
 }
 
 .accept-offered-swap-button {
