--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -81,6 +81,52 @@
       </ion-view>
     </ion-tab>
 
+    <ion-tab title="Swaps Offered" on-select="pendingTabSelected()" ng-controller="SwapsPendingCtrl">
+      <ion-view>
+        <div class="row loader-holder">
+          <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
+        </div>
+        <ion-content>
+          <notification ng-model="message" ng-show="message"></notification>
+          <div class="list card">
+
+            <div class="item item-avatar">
+              <h2>Marty McFly</h2>
+              <p>November 05, 1955</p>
+            </div>
+
+            <div class="item item-body">
+              <p>
+                This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
+                the content is from a card-body consisting of an image and paragraph text. The footer
+                consists of tabs, icons aligned left, within the card-footer.
+              </p>
+              <p>
+                <a href="#" class="subdued">1 Like</a>
+                <a href="#" class="subdued">5 Comments</a>
+              </p>
+            </div>
+
+            <div class="item tabs tabs-secondary tabs-icon-left">
+              <a class="tab-item" href="#">
+                <i class="icon ion-thumbsup"></i>
+                Like
+              </a>
+              <a class="tab-item" href="#">
+                <i class="icon ion-chatbox"></i>
+                Comment
+              </a>
+              <a class="tab-item" href="#">
+                <i class="icon ion-share"></i>
+                Share
+              </a>
+            </div>
+
+          </div>
+        </ion-content>
+      </ion-view>
+    </ion-tab>
+
     <ion-tab title="Up for Grabs" on-select="upForGrabsTabSelected()" ng-controller="SwapsUpForGrabsCtrl">
       <ion-view>
         <div class="row loader-holder">
@@ -156,52 +202,6 @@
                 </div>
               </div>
             </div>
-          </div>
-        </ion-content>
-      </ion-view>
-    </ion-tab>
-
-    <ion-tab title="Pending" on-select="pendingTabSelected()" ng-controller="SwapsPendingCtrl">
-      <ion-view>
-        <div class="row loader-holder">
-          <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
-        </div>
-        <ion-content>
-          <notification ng-model="message" ng-show="message"></notification>
-          <div class="list card">
-
-            <div class="item item-avatar">
-              <h2>Marty McFly</h2>
-              <p>November 05, 1955</p>
-            </div>
-
-            <div class="item item-body">
-              <p>
-                This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-                the content is from a card-body consisting of an image and paragraph text. The footer
-                consists of tabs, icons aligned left, within the card-footer.
-              </p>
-              <p>
-                <a href="#" class="subdued">1 Like</a>
-                <a href="#" class="subdued">5 Comments</a>
-              </p>
-            </div>
-
-            <div class="item tabs tabs-secondary tabs-icon-left">
-              <a class="tab-item" href="#">
-                <i class="icon ion-thumbsup"></i>
-                Like
-              </a>
-              <a class="tab-item" href="#">
-                <i class="icon ion-chatbox"></i>
-                Comment
-              </a>
-              <a class="tab-item" href="#">
-                <i class="icon ion-share"></i>
-                Share
-              </a>
-            </div>
-
           </div>
         </ion-content>
       </ion-view>
