Renamed associated files from Pending to Swaps Offered

--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -81,7 +81,7 @@
       </ion-view>
     </ion-tab>
 
-    <ion-tab title="Swaps Offered" on-select="pendingTabSelected()" ng-controller="SwapsPendingCtrl">
+    <ion-tab title="Swaps Offered" on-select="swapsOfferedTabSelected()" ng-controller="SwapsOfferedCtrl">
       <ion-view>
         <div class="row loader-holder">
           <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
